Capture the stream panel
Signed-off-by: Alec Hinh <alec4555@gmail.com>

--- a/crystalline.css
+++ b/crystalline.css
@@ -1745,6 +1745,10 @@ div.search-bar {
     background: rgba(0, 0, 0, 0.2) !important;
 }
 
+.activityPanel_a4d4d9 {
+    background: rgba(0, 0, 0, 0) !important;
+}
+
 .container_adcaac {
     background: rgba(0, 0, 0, 0) !important;
 }
