Capture the context menus (2)
Signed-off-by: Alec Hinh <alec4555@gmail.com>

--- a/crystalline.css
+++ b/crystalline.css
@@ -1765,8 +1765,8 @@ div.search-bar {
     background: rgba(0, 0, 0, 0.3) !important;
 }
 
-.flexible_d90b3d{
-	background: rgba(0,0,0,0.9) !important;
+.flexible_d90b3d {
+    background: rgba(0, 0, 0, 0.9) !important;
 }
 
 .option strong,
