Capture group DM window, and dim the inbox popup
Signed-off-by: Alec Hinh <alec4555@gmail.com>

--- a/crystalline.css
+++ b/crystalline.css
@@ -1769,6 +1769,14 @@ div.search-bar {
     background: rgba(0, 0, 0, 0.9) !important;
 }
 
+.container_f8a938 {
+    background: rgba(0, 0, 0, 0.9) !important;
+}
+
+.popout_e6af9c {
+    background: rgba(0, 0, 0, 0.9) !important;
+}
+
 .option strong,
 span.displayed-nick,
 span.answer {
