Attach opacity to scrollable container
Signed-off-by: Alec Hinh <alec4555@gmail.com>

--- a/crystalline.css
+++ b/crystalline.css
@@ -1773,6 +1773,10 @@ div.search-bar {
     background: rgba(0, 0, 0, 0.9) !important;
 }
 
+.scrollableContainer_bdf0de {
+    background: rgba(0, 0, 0, 0.3) !important;
+}
+
 .popout_e6af9c {
     background: rgba(0, 0, 0, 0.9) !important;
 }
